#582 - Fix vertical positioning of ranked variants tooltip so that only locked tooltips be adjusted so that top of tall tooltip isn’t cropped.  On hover, don’t address vertical tooltip. Also, address issue with z-index being cancelled out by transform in .slide-left css (causing tooltip to be obscured behind navbar) when side panel was shown.

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1842,7 +1842,8 @@ inputinput:-moz-placeholder {
   -webkit-transform: translate(356px, 0);
   -moz-transform: translate(356px, 0);
   -ms-transform: translate(356px, 0);
-  -o-transform: translate(356px, 0); }
+  -o-transform: translate(356px, 0);
+  z-index: 1030; }
 
 /* make keyframes that tell the start state and the end state of our object */
 @-webkit-keyframes fadeIn {
